wk_taa_taaqa/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cancellations</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>6%2E Closed Won</fullName>
        </values>
        <values>
            <fullName>Pending Cancellation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Sales</fullName>
        <description>Used for New Sales Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2E Gain Access</fullName>
        </values>
        <values>
            <fullName>2%2E Recognize Need</fullName>
        </values>
        <values>
            <fullName>3%2E Execute Demo</fullName>
        </values>
        <values>
            <fullName>4%2E Align</fullName>
        </values>
        <values>
            <fullName>5%2E Time to Buy</fullName>
        </values>
        <values>
            <fullName>6%2E Closed Won</fullName>
        </values>
        <values>
            <fullName>7%2E Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Opportunity</fullName>
        <description>Process for all Renewals</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Confirm</fullName>
        </values>
        <values>
            <fullName>Closed Converted</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Late renewal Confirmed</fullName>
        </values>
        <values>
            <fullName>Not in BI</fullName>
        </values>
        <values>
            <fullName>Pending Renewal</fullName>
        </values>
        <values>
            <fullName>Renewal Lost</fullName>
        </values>
        <values>
            <fullName>Renewal Won</fullName>
        </values>
        <values>
            <fullName>Time to Renew</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMS_ASR_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS ASR Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Account_Grouping__c</fullName>
        <formula>CASE( Account_X_Reference__r.AMS_Account_Grouping__c ,&quot;0&quot;,&quot;Non-OFX User&quot;,&quot;2&quot;,&quot;WAN&quot;,&quot;5&quot;,&quot;New OFX Account&quot;,&quot;6&quot;,&quot;OFX Account&quot;,&quot;7&quot;,&quot;PUP&quot;,&quot;8&quot;,&quot;LIB&quot;,&quot;4&quot;,&quot;PUP WAN&quot;,&quot;3&quot;,&quot;LIB WAN&quot;,&quot;9&quot;,&quot;1040 Conversion&quot;,&quot;A&quot;,&quot;Corp Tax Lib&quot;,&quot;B&quot;,&quot;Universities&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Account Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Account_Number__c</fullName>
        <formula>Account_X_Reference__r.ApplicationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_BDO_MCG_Renewal__c</fullName>
        <label>AMS BDO-MCG Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDO</fullName>
                </value>
                <value>
                    <fullName>McGladrey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_BDO_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS BDO report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_BOGO_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS BOGO Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Billing_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Billing Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Billing_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMS Billing Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMS_Corp_National_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Corp National report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Corp_Suite_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Corp Suite report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_LIB_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS LIB report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_McGladrey_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS McGladrey report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_New_Renew_Code__c</fullName>
        <formula>CASE( Account_X_Reference__r.AMS_New_Renew_Code__c ,&quot;1&quot;,&quot;New Account&quot;,&quot;2&quot;,&quot;Renewed&quot;,&quot;3&quot;,&quot;Renewed&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS New/Renew Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Order_Analyst_Order_Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Order Analyst Order Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Order_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMS Order Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMS_Order_Number__c</fullName>
        <label>AMS Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Order_Processing_Stage__c</fullName>
        <label>AMS Order Processing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Order Processing</fullName>
                </value>
                <value>
                    <fullName>Submitted to Order Analysis</fullName>
                </value>
                <value>
                    <fullName>Submitted to Billing</fullName>
                </value>
                <value>
                    <fullName>Order Complete</fullName>
                </value>
                <value>
                    <fullName>In review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Order_Processor_Order_Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Order Processor Order Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Order_Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMS Order Processor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMS_Order_Return_to_Processing_Notes__c</fullName>
        <label>AMS Order Return to Processing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_PUP_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS PUP report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_RC_DTN_Name_Combo__c</fullName>
        <formula>AMS_RC_DTN__c +&quot;-&quot;+ AMS_RC_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_RC_DTN__c</fullName>
        <label>AMS RC DTN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_RC_Name__c</fullName>
        <label>AMS RC Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Ready_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Ready for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Ready_for_Order_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Ready for Order Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Ready_for_Order_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Ready for Order Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Remove_from_Renewal_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Remove from Renewal Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Additional_Revenue_2016__c</fullName>
        <label>AMS Renewal Additional Revenue 2016</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Additional_revenue_2017__c</fullName>
        <label>AMS Renewal Additional revenue 2017</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Call_Status__c</fullName>
        <label>AMS Renewal Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Downgrade to PAYP</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Unable to Contact</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
                <value>
                    <fullName>Will Not Renew Early</fullName>
                </value>
                <value>
                    <fullName>Will Renew Early</fullName>
                </value>
                <value>
                    <fullName>Won&apos;t Renew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Cancel_Date__c</fullName>
        <label>AMS Renewal Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Contact__c</fullName>
        <label>AMS Renewal Contact Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Email__c</fullName>
        <label>AMS Renewal Email Override</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Grouping__c</fullName>
        <label>AMS Renewal Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Heritage</fullName>
                </value>
                <value>
                    <fullName>SA Heritage</fullName>
                </value>
                <value>
                    <fullName>Corp</fullName>
                </value>
                <value>
                    <fullName>Big 4</fullName>
                </value>
                <value>
                    <fullName>SA PUP/LIB</fullName>
                </value>
                <value>
                    <fullName>PUP/LIB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMS Renewal Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Original_DTN__c</fullName>
        <label>AMS Renewal Original DTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Original_Rep__c</fullName>
        <label>AMS Renewal Original Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Out_of_Base_Date__c</fullName>
        <label>AMS Renewal Out of Base Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Prior_Year_Adjust_2015__c</fullName>
        <label>AMS Renewal Prior Year Adjust 2015</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Prior_Year_Adjust_2016__c</fullName>
        <label>AMS Renewal Prior Year Adjust 2016</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Rep_DTN__c</fullName>
        <label>AMS Renewal Rep DTN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewal_Year__c</fullName>
        <label>AMS Renewal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_Return_Order_to_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Return Order to Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Return_To_Analysis_Notes__c</fullName>
        <label>AMS Return to Analysis Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_Return_for_Review_Notes__c</fullName>
        <label>AMS Return for Review Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AMS_Return_to_Order_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Return to Order Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Return_to_Order_Processing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Return to Order Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_STR_LIB_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS STR LIB report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_STR_PUP_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS STR PUP report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Segment__c</fullName>
        <formula>Account_X_Reference__r.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Special_Agreement__c</fullName>
        <formula>CASE( Account_X_Reference__r.AMS_Special_Agreement__c ,&quot;Y&quot;, &quot;Corp Suite - Cal&quot;, &quot;Z&quot;,&quot;Corp Suite - FY&quot;,&quot;C&quot;, &quot;Corporate Filer&quot;, &quot;M&quot;, &quot;Multi_Site Main&quot;, &quot;N&quot;, &quot;Multi-Site Sub&quot;, &quot;R&quot;, &quot;RFX(OFXII Remote)&quot;, &quot;S&quot;, &quot;SFX&quot;, &quot;A&quot;, &quot;Standalone Accuplanner&quot;, &quot;V&quot;, &quot;Standalone Auditvision&quot;, &quot;L&quot;,&quot;Sub License&quot;, &quot;W&quot;, &quot;WAN Main&quot;, &quot;X&quot;, &quot;WAN Satellite&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Special Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Status__c</fullName>
        <formula>CASE(Account_X_Reference__r.AMS_Status__c, &quot;8&quot;,&quot;Renewed 2017&quot;, &quot;7&quot;,&quot;Renewed 2016&quot;,  &quot;6&quot;, &quot;Renewed 2015&quot;, &quot;5&quot;, &quot;Renewed 2014&quot;,&quot;4&quot;, &quot;Renewed 2013&quot;, &quot;3&quot;, &quot;Renewed 2012&quot;, &quot;C&quot;, &quot;Cancelled&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Strategic_report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Strategic report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_Sub_Segment__c</fullName>
        <formula>Account_X_Reference__r.SubSegment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Sub Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Web_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMS Web Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Unique_Contract_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Contract ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Opportunity__c</fullName>
        <description>Used in reporting to show Account Name and Opportunity name in a single field. Used for grouping reports for dashboard tables.</description>
        <formula>Account.Name &amp;&quot; - &quot;&amp; Name</formula>
        <label>Account - Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_X_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account X-Reference</label>
        <referenceTo>Account_X_Reference__c</referenceTo>
        <relationshipLabel>Opportunities (Account X-Reference)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcctName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <formula>IF(IsWon=TRUE, Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won_no_BOGO__c</fullName>
        <formula>IF(IsWon=TRUE &amp;&amp;  AMS_BOGO_Account__c &lt;&gt; true, Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won no BOGO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Auth_Campaign_Fall_Reason__c</fullName>
        <label>Auth Campaign Fall Contact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Authorization_Campaign_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auth_Campaign_Last_Update__c</fullName>
        <description>Populated via workflow to the date the Authorization Campaign Status field was last updated.</description>
        <label>Auth Campaign Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Campaign_Status__c</fullName>
        <label>Authorization Campaign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Will prebuy</fullName>
                </value>
                <value>
                    <fullName>Will not prebuy</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Considering Offer</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Will prebuy in Summer</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization_Campaign_reas__c</fullName>
        <label>Auth Campaign Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Authorization_Campaign_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient incentive/not interested</fullName>
                </value>
                <value>
                    <fullName>Don’t want risk of securing clicks</fullName>
                </value>
                <value>
                    <fullName>Don’t want to carry balance on books</fullName>
                </value>
                <value>
                    <fullName>Pass costs to taxpayer</fullName>
                </value>
                <value>
                    <fullName>Don’t see value</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Considering Offer</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization Campaign Probability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BI_Retention_Quota__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BI Retention Quota</label>
        <referenceTo>BI_Retention_Quota__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blueprints_Created__c</fullName>
        <label>Blueprints Created</label>
        <summaryForeignKey>CBI_Form__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Buyer_s_Process_Playbook__c</fullName>
        <formula>HYPERLINK(&quot;https://wktaa.my.salesforce.com/sfc/#workspaceView?selectedWorkspaceId=&quot;+
          CASE( Owner.High_Level_Division__c ,
                &quot;National &amp; Strategic Accounts&quot;,&quot;05831000000MC3r&quot;,
                &quot;Research &amp; Learning&quot;,&quot;05831000000MC3w&quot;,
                &quot;Service Source&quot;,&quot;05831000000MC3w&quot;,
                &quot;ProSW Medium/Large&quot;,&quot;05831000000MC3c&quot;,
                &quot;US Small Firms&quot;,&quot;05831000000MC41&quot;,&quot;&quot;),&quot;Division Playbook&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer&apos;s Process Playbook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Quote__c</fullName>
        <description>Selection for Apttus or Steelbrick Product Sets</description>
        <label>CPQ System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>Steelbrick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cancellation Opportunities</relationshipLabel>
        <relationshipName>Cancellation_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Day_Calendar_Month__c</fullName>
        <formula>DAY( CloseDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Day(Calendar Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Week__c</fullName>
        <formula>IF(DAY(CloseDate)=1,&quot;Week 1&quot;,
IF(DAY(CloseDate)=2,&quot;Week 1&quot;,
IF(DAY(CloseDate)=3,&quot;Week 1&quot;,
IF(DAY(CloseDate)=4,&quot;Week 1&quot;,
IF(DAY(CloseDate)=5,&quot;Week 1&quot;,
IF(DAY(CloseDate)=6,&quot;Week 1&quot;,
IF(DAY(CloseDate)=7,&quot;Week 1&quot;,
IF(DAY(CloseDate)=8,&quot;Week 1&quot;,
IF(DAY(CloseDate)=9,&quot;Week 2&quot;,
IF(DAY(CloseDate)=10,&quot;Week 2&quot;,
IF(DAY(CloseDate)=11,&quot;Week 2&quot;,
IF(DAY(CloseDate)=12,&quot;Week 2&quot;,
IF(DAY(CloseDate)=13,&quot;Week 2&quot;,
IF(DAY(CloseDate)=14,&quot;Week 2&quot;,
IF(DAY(CloseDate)=15,&quot;Week 2&quot;,
IF(DAY(CloseDate)=16,&quot;Week 3&quot;,
IF(DAY(CloseDate)=17,&quot;Week 3&quot;,
IF(DAY(CloseDate)=18,&quot;Week 3&quot;,
IF(DAY(CloseDate)=19,&quot;Week 3&quot;,
IF(DAY(CloseDate)=20,&quot;Week 3&quot;,
IF(DAY(CloseDate)=21,&quot;Week 3&quot;,
IF(DAY(CloseDate)=22,&quot;Week 3&quot;,
IF(DAY(CloseDate)=23,&quot;Week 4&quot;,
IF(DAY(CloseDate)=24,&quot;Week 4&quot;,
IF(DAY(CloseDate)=25,&quot;Week 4&quot;,
IF(DAY(CloseDate)=26,&quot;Week 4&quot;,
IF(DAY(CloseDate)=27,&quot;Week 4&quot;,
IF(DAY(CloseDate)=28,&quot;Week 4&quot;,
IF(DAY(CloseDate)=29,&quot;Week 4&quot;,
IF(DAY(CloseDate)=30,&quot;Week 4&quot;,&quot;Week 4&quot;))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adding to Suite</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Add-on Sale</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Better Price</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>CCH Experience</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Competition - Content / Software issue</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Competition - Platform</fullName>
                    <color>#A53711</color>
                </value>
                <value>
                    <fullName>Competition - Price</fullName>
                    <color>#66E9BD</color>
                </value>
                <value>
                    <fullName>Competitive Conversion</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Combining contracts</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Conversion to Better Solution</fullName>
                    <color>#B6E32E</color>
                </value>
                <value>
                    <fullName>Converted By Mistake</fullName>
                    <color>#641CCF</color>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <color>#F96FB7</color>
                </value>
                <value>
                    <fullName>Features / Functionality</fullName>
                    <color>#2F5D85</color>
                </value>
                <value>
                    <fullName>Merger with non WK Firm</fullName>
                    <color>#AFCADF</color>
                </value>
                <value>
                    <fullName>Merger with WK Firm</fullName>
                    <color>#8F6429</color>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                    <color>#EFAE73</color>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#57F17C</color>
                </value>
                <value>
                    <fullName>Strong References</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Change effective dates</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Change in business - Bankrupt</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Change in business - Budget cuts</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Change in business - Business focus change</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Change in business - Personnel change</fullName>
                    <color>#A53711</color>
                </value>
                <value>
                    <fullName>Change in business - Went out of business</fullName>
                    <color>#66E9BD</color>
                </value>
                <value>
                    <fullName>Conversion - Step Down</fullName>
                    <color>#0B24BE</color>
                </value>
                <value>
                    <fullName>Conversion - Step Over</fullName>
                    <color>#419249</color>
                </value>
                <value>
                    <fullName>Conversion - Step Up</fullName>
                    <color>#B6E32E</color>
                </value>
                <value>
                    <fullName>Correct order entry error</fullName>
                    <color>#641CCF</color>
                </value>
                <value>
                    <fullName>Credit dept cancel</fullName>
                    <color>#F96FB7</color>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                    <color>#2F5D85</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>